Revert to using discriminator for storage profiles.
